--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,14 @@
                     </div>
                     <div class="signup-form">
                         <input type="text" placeholder="Name" name="name" required> 
-                        <input type="text" placeholder="Email" name="email" required>  
-                        <input type="text" placeholder="How can we help?" name="comment" required>  
+                        <hr>
+                        <input type="text" placeholder="Email" name="email" required> 
+                        <hr> 
+                        <input type="text" placeholder="Phone Number" name="phone number" required> 
+                        <hr>
+                        <p>How can we help?</p>
+                        <input type="text" name="comment" required>  
+                        <hr>
                     </div>
                     <div class="button">
                         <a href="#">Get Started</a>
