--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,7 @@
                         <hr> 
                         <input type="text" placeholder="Phone Number" name="phone number" required> 
                         <hr>
-                        <p>How can we help?</p>
-                        <input type="text" name="comment" required>  
+                        <input type="text" placeholder="How can we help?" name="comment" required>  
                         <hr>
                     </div>
                     <div class="button">
